# efficient-rust-pairings

./: Cargo.toml  README.md
Benchmarking/Go-libs/: benchmark_test.go  data.go  go.mod  go.sum  main.go
Benchmarking/Rust-libs/: Cargo.toml
Benchmarking/Rust-libs/benches/: my_benchmark.rs
Benchmarking/Rust-libs/src/: data.rs  main.rs
Map-to-G2/: IsogeniesG2.ipynb
pairings/: Cargo.toml
pairings/src/: engines.rs  lib.rs  tests.rs
pairings/src/curves/: curve_arithmetics.rs  g1.rs  g2.rs  gt.rs  mod.rs
pairings/src/curves/g2_primitives/: cofactor_clean.rs  gls_multiplication.rs  mod.rs  phi.rs
pairings/src/extensions/: ext_fields.rs  fp12.rs  fp2.rs  fp24.rs  fp4.rs  fp48.rs  fp8.rs  g2_extfields.rs  mod.rs
pairings/src/extensions/towering1/: fp12.rs  fp2.rs  fp24.rs  fp4.rs  fp48.rs  fp8.rs  mod.rs
pairings/src/extensions/towering2/: fp2.rs  fp24.rs  fp4.rs  fp48.rs  fp8.rs  mod.rs
pairings/src/extensions/towering3/: fp24.rs  fp4.rs  fp48.rs  fp8.rs  mod.rs
pairings/src/fields/: arithmetic.rs  mod.rs  prime_fields.rs
pairings/src/parameters/: builders.rs  mod.rs  paramlist.rs
pairings/src/parameters/preloadedconfs/: bls12.rs  bls24.rs  bls48.rs  mod.rs
pairings/src/tools/: arithmetic_interface.rs  exponent.rs  hashs.rs  mod.rs  recoders.rs
src/: main.rs
