[package]
name = "pairings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "^0.4.4"
num-traits = "^0.2.17"
rand = "0.8"
once_cell = "1.19.0"
sha2 = "0.10.8"
base64 = "0.22.1"
hmac ="0.12.1"

[[test]]
name = "test_pairings"
path  ="tests/test_pairings.rs" 
