[package]
name = "zk"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.3"
ark-ff = "0.3"
ark-std = "0.3"  # Optional: for standard library features
ark-ec = "0.3"   # Optional: for working with elliptic curves
bls12_381 = "0.8.0"
pairings = { git = "https://github.com/kamel78/efficient-rust-pairings.git", branch = "main" }
